--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "goit-react-hw-03",
+  "name": "goit-react-hw-07",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -19,7 +19,7 @@
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
-    "redux-persist": "^6.0.0",
+    "axios": "^1.7.7",
     "tailwindcss": "^4.1.11",
     "yup": "^1.7.0"
   },
@@ -31,6 +31,7 @@
     "eslint": "^9.30.1",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
+    "prettier": "^3.3.3",
     "globals": "^16.3.0",
     "vite": "^7.0.4"
   }
